--- a/index.html
+++ b/index.html
@@ -302,11 +302,11 @@ img {
 
 <h3 class="mume-header" id="-%E5%89%B5%E5%88%8A%E5%8F%B7volume_one-"><a href="./volume_one">&#x5275;&#x520A;&#x53F7;</a></h3>
 
-<h3 class="mume-header" id="-%E7%AC%AC%E4%BA%8C%E5%8F%B7volume_tow-"><a href="./volume_tow">&#x7B2C;&#x4E8C;&#x53F7;</a></h3>
+<h3 class="mume-header" id="-%E7%AC%AC2%E5%8F%B7volume_two-"><a href="./volume_two">&#x7B2C;2&#x53F7;</a></h3>
 
-<h3 class="mume-header" id="-%E7%AC%AC%E4%B8%89%E5%8F%B7volume_three-"><a href="./volume_three">&#x7B2C;&#x4E09;&#x53F7;</a></h3>
+<h3 class="mume-header" id="-%E7%AC%AC3%E5%8F%B7volume_three-"><a href="./volume_three">&#x7B2C;3&#x53F7;</a></h3>
 
-<h3 class="mume-header" id="-%E7%AC%AC%E5%9B%9B%E5%8F%B7volume_four-"><a href="./volume_four">&#x7B2C;&#x56DB;&#x53F7;</a></h3>
+<h3 class="mume-header" id="-%E7%AC%AC4%E5%8F%B7volume_four-"><a href="./volume_four">&#x7B2C;4&#x53F7;</a></h3>
 
 
       </div>
