--- a/volume_four/index.html
+++ b/volume_four/index.html
@@ -4,7 +4,7 @@
     <title>index</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="twitter:card" content="./images/firebase_top.png" />
+    <meta property="og:image" content="./images/firebase_top.png" />
 
     <link
       rel="stylesheet"
