--- a/volume_four/index.html
+++ b/volume_four/index.html
@@ -1,9 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>index</title>
+    <title>Reactstini 第4号</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      property="og:url"
+      content="https://jumpei-matsuda.github.io/reactstini/volume_four/"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="Reactstini 第4号" />
+    <meta property="og:description" content="Firebaseの導入" />
     <meta property="og:image" content="./images/firebase_top.png" />
 
     <link
