--- a/volume_four/index.html
+++ b/volume_four/index.html
@@ -11,7 +11,10 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Reactstini 第4号" />
     <meta property="og:description" content="Firebaseの導入" />
-    <meta property="og:image" content="./images/firebase_top.png" />
+    <meta
+      property="og:image"
+      content="https://jumpei-matsuda.github.io/reactstini/volume_four/images/firebase_top.png"
+    />
 
     <link
       rel="stylesheet"
